--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "homepage": "https://avkostin.github.io/goit-react-hw-02-phonebook",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.1.52",
     "react-scripts": "5.0.1",
-    "tsutils": "^3.21.0",
+    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
